Fix inconsistency between list of groupable fields and logig causing "genre" and other groupings not to work.

This code is still very fragile though and we should find a better solution

BUG: 243344